2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Some dirty region handling tweaks.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* SDK tweaks: added note on message pumping; include ChangeLog.txt.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Made the update logic smarter by actually utilizing the "dirty" regions
  passed in by Gecko.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Fixed some non-C code: enums (spotted by Andreas Kirsch) and an inline in
  gecko_mem.h.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added convenience function to register a global JavaScript object for
  scripting.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added a wrapper for the Gecko component manager (the idea is to make common
  component manager/registrar tasks more convenient) as well as getters for
  the actual Gecko component manager, component registrar and service manager.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added a wrapper object to allow access to Gecko memory allocation without
  having to necessarily link against XPCOM.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added a "string" object, used when strings are returned from OffscreenGecko.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Fixed a cut'n'paste error in OSGK::Impl::Ref<> causing AttachNew() to do
  the opposite of what it was supposed to do (not adding a ref).

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added ability to specify additional XPCOM components paths.

2007-11-24	Frank Richter	<frank.richter@gmail.com>

* Switched VC runtime library to static version.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Added support for specifying paths to search for XULrunner.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Fix for building against XULrunner SDK 1.9b2pre.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* When generating VC projects, provide fallback XULrunner SDK location in the